# oxygraphis

./: .gitignore  Cargo.toml  README.md  biv_dist.tsv  test.txt
examples/: DIRTLPAwb+_interaction_matrix.tsv  DIRTLPAwb+_modules.tsv  clear_modularity.tsv  safariland.tsv  safariland_nb.tsv  safariland_weighted.tsv
oxygraph/: Cargo.toml  README.md
oxygraph/src/: bipartite.rs  derived.rs  int_matrix.rs  lib.rs  modularity.rs  sort.rs
src/: lib.rs  main.rs
