[package]
name = "oxygraphis"
version = "0.1.63"
edition = "2021"
repository = "https://github.com/Euphrasiologist/oxygraphis/"
documentation = "https://docs.rs/oxygraphis"
homepage = "https://github.com/Euphrasiologist/oxygraphis/"
description = """
Algorithms and structures on ecological graphs command line interface.
"""
keywords = ["graph", "ecology", "bipartite"]
categories = ["algorithms", "science"]
license = "MIT"

[workspace]

[dependencies]
anyhow = "1.0.64"
clap = { version = "4.0.8", features = ["cargo"] }
oxygraph = { path = "./oxygraph" }
rayon = "1.5.3"
