[package]
name = "oxygraphis"
version = "0.2.5"
edition = "2021"
repository = "https://github.com/Euphrasiologist/oxygraphis/"
documentation = "https://docs.rs/oxygraphis"
homepage = "https://github.com/Euphrasiologist/oxygraphis/"
description = """
Algorithms and structures on ecological graphs command line interface.
"""
keywords = ["graph", "ecology", "bipartite"]
categories = ["algorithms", "science"]
license = "MIT"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]

[dependencies]
anyhow = "1.0.64"
calm_io = "0.1.1"
clap = { version = "4.5.23", features = ["cargo"] }
oxygraph = { path = "./oxygraph" }
rayon = "1.5.3"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
