[package]
name = "oxygraph"
version = "0.1.4"
edition = "2021"
repository = "https://github.com/Euphrasiologist/oxygraphis/tree/main/oxygraph"
documentation = "https://docs.rs/oxygraphis"
homepage = "https://github.com/Euphrasiologist/oxygraphis/tree/main/oxygraph"
description = """
Algorithms and structures on ecological graphs.
"""
keywords = ["graph", "ecology", "bipartite"]
categories = ["algorithms", "science"]
license = "MIT"

[dependencies]
csv = "1.1.6"
petgraph = "0.6.2"
thiserror = "1.0.32"
serde = "1.0.143"
serde_derive = "1.0.143"
itertools = "0.10.3"
rand = "0.8.5"
ndarray = "0.15.6"
