[package]
name = "oxygraph"
version = "0.2.7"
edition = "2021"
repository = "https://github.com/Euphrasiologist/oxygraphis/tree/main/oxygraph"
documentation = "https://docs.rs/oxygraph"
homepage = "https://github.com/Euphrasiologist/oxygraphis/tree/main/oxygraph"
description = """
Algorithms and structures on ecological graphs.
"""
keywords = ["graph", "ecology", "bipartite"]
categories = ["algorithms", "science"]
license = "MIT"

[dependencies]
csv = "1.3.1"
petgraph = "0.6.5"
thiserror = "2.0.3"
serde = "1.0.214"
serde_derive = "1.0.214"
itertools = "0.13.0"
rand = "0.9.0-alpha.2"
ndarray = "0.16.1"
calm_io = "0.1.1"
rayon = "1.10.0"
